Post-migration processing of imports
Signed-off-by: Akiff Manji <akiff.manji@gmail.com>

--- a/src/app/search/input.component.scss
+++ b/src/app/search/input.component.scss
@@ -1,4 +1,4 @@
-@import '../common';
+@import 'src/styles/common';
 
 $input-border-color: lighten(rgba(theme-color(primary), 0.8), 10%);
 $input-border-active: #5c8de6;
