--- a/src/app/timeline/timeline.scss
+++ b/src/app/timeline/timeline.scss
@@ -1,4 +1,4 @@
-@import '../common';
+@import 'src/styles/common';
 
 $timeline-border-color: $card-border-color;
 $timeline-border: 1px solid $timeline-border-color;
