New info on adding business to OrgBook BC
Updates to contact page (new panel and minor from change), and small update to homepage, about how to add your business's information to OrgBook BC.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -54,6 +54,10 @@
         added. As well, other important verifable data such as the permits, licenses, and other accreditations these
         organizations hold will be added to OrgBook BC.
       </p>
+      
+      <p>
+	    Want to add your business information to OrgBook BC? See the panel on the <a [routerLink]="'/contact'">Connect with us</a> page for more details.
+      </p>
     </div>
     <div class="col-md-5 col-lg-4">
       <div class="alert alert-danger" *ngIf="loadError">
