--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -51,7 +51,7 @@
 
       <p>
         In the future, verifiable data about other organizations types such as sole proprietors and societies will be
-        added. As well, other important verifable data such as the permits, licenses, and other accreditations these
+        added. As well, other important verifiable data such as the permits, licenses, and other accreditations these
         organizations hold will be added to OrgBook BC.
       </p>
       
